--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -20,6 +20,8 @@
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
     "styled-components": "^6.1.11",
     "timeago": "^1.6.7",
     "timeago.js": "^4.0.2"
